crates/nash-solve/tests/snapshots/representation_predicates__an_explicit_higher_kind_is_preserved_at_local_calls.snap
---
source: crates/nash-solve/tests/representation_predicates.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\ntype higher 'f = Higher ('f int)\nidh : higher 'f -> higher 'f\nidh x = x\ngood = idh (Higher [])\n"
---
{
    "good": Annotation {
        context: [],
        free_vars: [],
        typ: Located {
            region: Region {
                start: Position {
                    line: 0,
                    column: 0,
                },
                end: Position {
                    line: 0,
                    column: 0,
                },
            },
            value: Named {
                reference: QualifiedName {
                    home: ModuleName {
                        package: None,
                        name: "Main",
                    },
                    name: "higher",
                },
                args: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 0,
                                column: 0,
                            },
                            end: Position {
                                line: 0,
                                column: 0,
                            },
                        },
                        value: Named {
                            reference: QualifiedName {
                                home: ModuleName {
                                    package: Some(
                                        PackageName {
                                            author: "nash",
                                            project: "base",
                                        },
                                    ),
                                    name: "Primitive",
                                },
                                name: "list",
                            },
                            args: [],
                        },
                    },
                ],
            },
        },
    },
    "idh": Annotation {
        context: [
            Apply {
                head: Located {
                    region: Region {
                        start: Position {
                            line: 0,
                            column: 0,
                        },
                        end: Position {
                            line: 0,
                            column: 0,
                        },
                    },
                    value: Var(
                        "f",
                    ),
                },
                args: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 0,
                                column: 0,
                            },
                            end: Position {
                                line: 0,
                                column: 0,
                            },
                        },
                        value: Named {
                            reference: QualifiedName {
                                home: ModuleName {
                                    package: Some(
                                        PackageName {
                                            author: "nash",
                                            project: "base",
                                        },
                                    ),
                                    name: "Primitive",
                                },
                                name: "int",
                            },
                            args: [],
                        },
                    },
                ],
            },
        ],
        free_vars: [
            "f",
        ],
        typ: Located {
            region: Region {
                start: Position {
                    line: 0,
                    column: 0,
                },
                end: Position {
                    line: 0,
                    column: 0,
                },
            },
            value: Lambda {
                from: Located {
                    region: Region {
                        start: Position {
                            line: 0,
                            column: 0,
                        },
                        end: Position {
                            line: 0,
                            column: 0,
                        },
                    },
                    value: Named {
                        reference: QualifiedName {
                            home: ModuleName {
                                package: None,
                                name: "Main",
                            },
                            name: "higher",
                        },
                        args: [
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 0,
                                        column: 0,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 0,
                                    },
                                },
                                value: Var(
                                    "f",
                                ),
                            },
                        ],
                    },
                },
                to: Located {
                    region: Region {
                        start: Position {
                            line: 0,
                            column: 0,
                        },
                        end: Position {
                            line: 0,
                            column: 0,
                        },
                    },
                    value: Named {
                        reference: QualifiedName {
                            home: ModuleName {
                                package: None,
                                name: "Main",
                            },
                            name: "higher",
                        },
                        args: [
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 0,
                                        column: 0,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 0,
                                    },
                                },
                                value: Var(
                                    "f",
                                ),
                            },
                        ],
                    },
                },
            },
        },
    },
}
