crates/nash-solve/tests/snapshots/representation_predicates__annotation_kinds_are_fixed_before_instantiation.snap
---
source: crates/nash-solve/tests/representation_predicates.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\ntype higher 'f = Higher ('f int)\nidfa : 'f 'a -> 'f 'a\nidfa x = x\nbad = idfa (Higher [])\n"
---
nash::type::bad_kind

  × Kind mismatch in `type application`: expected `Type -> Type`, found `Type`.
   ╭─[Main.nash:7:1]
 6 │ idfa x = x
 7 │ bad = idfa (Higher [])
   · ───
   ╰────
  help: Type arguments:

        Check type-constructor arguments and the annotation's quantified kinds.
