crates/nash-solve/tests/snapshots/representation_predicates__imported_scheme_defaults_are_fixed_before_instantiation.snap
---
source: crates/nash-solve/tests/representation_predicates.rs
description: "module Source exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nidfa : 'f 'a -> 'f 'a\nidfa x = x\n"
---
{
    "idfa": Annotation {
        context: [
            Apply {
                head: Located {
                    region: Region {
                        start: Position {
                            line: 0,
                            column: 0,
                        },
                        end: Position {
                            line: 0,
                            column: 0,
                        },
                    },
                    value: Var(
                        "f",
                    ),
                },
                args: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 0,
                                column: 0,
                            },
                            end: Position {
                                line: 0,
                                column: 0,
                            },
                        },
                        value: Var(
                            "a",
                        ),
                    },
                ],
            },
        ],
        free_vars: [
            "a",
            "f",
        ],
        typ: Located {
            region: Region {
                start: Position {
                    line: 0,
                    column: 0,
                },
                end: Position {
                    line: 0,
                    column: 0,
                },
            },
            value: Lambda {
                from: Located {
                    region: Region {
                        start: Position {
                            line: 0,
                            column: 0,
                        },
                        end: Position {
                            line: 0,
                            column: 0,
                        },
                    },
                    value: App {
                        head: Located {
                            region: Region {
                                start: Position {
                                    line: 0,
                                    column: 0,
                                },
                                end: Position {
                                    line: 0,
                                    column: 0,
                                },
                            },
                            value: Var(
                                "f",
                            ),
                        },
                        args: [
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 0,
                                        column: 0,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 0,
                                    },
                                },
                                value: Var(
                                    "a",
                                ),
                            },
                        ],
                    },
                },
                to: Located {
                    region: Region {
                        start: Position {
                            line: 0,
                            column: 0,
                        },
                        end: Position {
                            line: 0,
                            column: 0,
                        },
                    },
                    value: App {
                        head: Located {
                            region: Region {
                                start: Position {
                                    line: 0,
                                    column: 0,
                                },
                                end: Position {
                                    line: 0,
                                    column: 0,
                                },
                            },
                            value: Var(
                                "f",
                            ),
                        },
                        args: [
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 0,
                                        column: 0,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 0,
                                    },
                                },
                                value: Var(
                                    "a",
                                ),
                            },
                        ],
                    },
                },
            },
        },
    },
}
